@@ -1,3 +1,10 @@
+2007-07-25  Denis Washington <denisw@svn.gnome.org>
+
+	* gnome-theme-info.c: (add_common_icon_theme_dir_monitor),
+	(look_for_cursor_theme):
+	Fix abug introduced by the changes in revision 7856 which caused
+	cursor themes to not being found anymore.
+
 2007-07-13  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (gdk_pixbuf_from_xcursor_image),
